--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+@plugin "daisyui";
+@import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
